Some initial docker changes

--- a/docker.env
+++ b/docker.env
@@ -6,29 +6,35 @@ PGID=1000
 TZ=America/New_York
 
 # MySQL Server VARIABLES
-MYSQL_ROOT_HOST=%
-MYSQL_ROOT_PASSWORD=1999asheron2017
-MYSQL_USER=acedockeruser
-MYSQL_PASSWORD=2020acEmulator2017
+MYSQL_ROOT_HOST=localhost
+MYSQL_ROOT_PASSWORD=password
+MYSQL_USER=AceDev
+MYSQL_PASSWORD=AceEmulator2022
 MYSQL_DATABASE=ace%
+MYSQL_TCP_PORT=3306
+MYSQL_UNIXPORT=3306
 
 # ACEmulator Config.js VARIABLES
-ACE_WORLD_NAME=ACEmulator
+ACE_WORLD_NAME=Pk
 ACE_DAT_FILES_DIRECTORY=/ace/Dats
 
 ACE_SQL_AUTH_DATABASE_NAME=ace_auth
-ACE_SQL_AUTH_DATABASE_HOST=ace-db
+ACE_SQL_AUTH_DATABASE_HOST=Ace
 ACE_SQL_AUTH_DATABASE_PORT=3306
 
 ACE_SQL_SHARD_DATABASE_NAME=ace_shard
-ACE_SQL_SHARD_DATABASE_HOST=ace-db
+ACE_SQL_SHARD_DATABASE_HOST=Ace
 ACE_SQL_SHARD_DATABASE_PORT=3306
 
 ACE_SQL_WORLD_DATABASE_NAME=ace_world
-ACE_SQL_WORLD_DATABASE_HOST=ace-db
+ACE_SQL_WORLD_DATABASE_HOST=Ace
+ACE_SQL_WORLD_DATABASE_PORT=3306
+
+ACE_SQL_WORLD_DATABASE_NAME=ace_custom
+ACE_SQL_WORLD_DATABASE_HOST=Ace
 ACE_SQL_WORLD_DATABASE_PORT=3306
 
 ACE_SQL_INITIALIZE_DATABASES=true
-ACE_SQL_DOWNLOAD_LATEST_WORLD_RELEASE=true
+ACE_SQL_DOWNLOAD_LATEST_WORLD_RELEASE=false
 
 ACE_NONINTERACTIVE_CONSOLE=true
