--- a/docker.env
+++ b/docker.env
@@ -16,17 +16,17 @@ MYSQL_UNIXPORT=3306
 
 
 # Mysql Backup
-DB_SERVER=partytide-db
-DB_USER=root
-DB_PASS=password
-DB_NAMES="ace_auth ace_shard"
-DB_DUMP_TARGET=s3://pourtide-db-backup/dumps
-DB_DUMP_FREQ=60
-AWS_ACCESS_KEY_ID=[INSERT YOUR AWS ID]
-AWS_SECRET_ACCESS_KEY=[INSERT YOUR AWS ACCESS KEY]
-AWS_DEFAULT_REGION=us-east-1
-COMPRESSION=bzip2
-NICE=true
+#DB_SERVER=partytide-db
+#DB_USER=root
+#DB_PASS=password
+#DB_NAMES="ace_auth ace_shard"
+#DB_DUMP_TARGET=s3://pourtide-db-backup/dumps
+#DB_DUMP_FREQ=60
+#AWS_ACCESS_KEY_ID=[INSERT YOUR AWS ID]
+#AWS_SECRET_ACCESS_KEY=[INSERT YOUR AWS ACCESS KEY]
+#AWS_DEFAULT_REGION=us-east-1
+#COMPRESSION=bzip2
+#NICE=true
 
 # ACEmulator Config.js VARIABLES
 ACE_WORLD_NAME=partytide
